# ticket_scalper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ticket_scalper/: cli.py  github_ticket_scrape.py  jira_ticket_scrape.py  scrape_helpers.py
src/ticket_scalper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
